assets/sass/core/modules/forms/_forms.scss
/*  Formulários
======================*/
.form-control {
  display: block;
  @include clear();
  font-size: 11pt;

  fieldset {
    border: 0;
    margin: 0;
    // padding: 10px 0;
    padding-top: 10px;
    padding-bottom: 10px;
    legend {
      font-size: 15pt;
      color: $text;
      border-bottom: 1px solid $boder-ligthen-grey;
      display: block;
      width: 100%;
      padding-bottom: 10px;
      margin-bottom: 20px;
    }
  }
}

/*  Formulário (element-box)
======================*/
.form-custom-search {
  @extend .form-control;
  @include clear();
  padding: 10px;
}

/*  Form-default color
======================*/
.form-control-default {
  @include span(12);
  font-size: 13pt;
  background: $grey;
  padding: 10px;
  margin-bottom: 20px;

  fieldset {
    padding: 0;
    margin: 0;
    display: block;
    width: 100%;
    border: 0;
  }

  legend {
    font-weight: bold;
    padding: 10px 0;
  }

  
}
/*  Inputs
======================*/
.input-container {
  @include clear();
  // border: 1px solid blue;
}

.input-control {
  display: block;
  width: 100%;
  padding: 8px;
  margin-bottom: 5px;
  border: 1px solid $boder-ligthen-grey;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -o-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
}

.input-inline {
  @extend .input-control;
  padding-left: 0;
  padding-right: 0;
  margin-left: gutter();
  margin-right: gutter();
}

/*  Labels
======================*/
.label-control-block {
  display: block;
  @extend %label;
}

.label-control {
  @extend %label;
}

.label-control-right {
  @extend %label;
  text-align: right;
}

.required:before {
  content: "*";
  color: $blue;
}

/*  Botões
======================*/
.btn-search {
  @extend %button;
  color: #fff;
  font-size: 10pt;
  text-transform: uppercase;
  background: $dark-grey;
  border-color: $dark-grey;
  padding: 5px 15px;
}

/*  Formulário de login
============================*/
.form-login {
  font-size: 9pt;

  label {
    font-size: 9pt;
    margin-right: 5px;
    margin-left: 10px;
    display: block;
    @media (min-width: $screen-mid-size) {
      display: inline-block;
      width: 37%;
    }
  }

  input {
    color: $text-dark-grey;
    padding: 0 3px;
    margin: 5px 0;
    font-size: 9pt;
    border: 0;
    outline: none;
    border-radius: 10px;
    width: 100%;
    display: block;
    @media (min-width: $screen-mid-size) {
      display: inline-block;
      width: 75%;
      margin: 0;
    }
  }

  .btn-submit {
    background: $button-magazine;
    color: inherit;
    border: 0;
    border-radius: 5px;
    padding: 2px 10px;
    font-size: 9pt;
  }

  @media (min-width: $screen-mid-size) {
    display: inline-block;
    margin-left: 20px;
  }
}

.portal .form-login {
  .btn-submit {
    background: #fff;
    color: $dark-green;
  }
}

/*  Formulário de busca (header)
============================*/
.form-search-header {
  @include span(12);
  text-align: right;
  margin-top: 20px;
  margin-bottom: 5px;
  color: $text-dark-grey;
  font-size: 9pt;
  @media (min-width: $screen-mid-size) {
    @include span(4 last);
  }
  @include clear();
}

.search-input-header {
  @include span(12);
  padding: 10px;
  border-radius: 5px;
  border: 1px solid $default-green;
  @media (min-width: $screen-mid-size) {
    @include span(12);
  }
}

.search-button {
  width: 37px;
  background: url("../images/search-button.gif") no-repeat;
  background-position: center center;
  border: 0;
  height: 40px;
  margin-left: -40px;
}

/*  Formulário de busca com icones no input
=====================================*/
.form-custom-search {
  font-size: 12pt;
  color: #000;
  .input-control {
    @include span(4);
    @media (min-width: $screen-mid-size) {
      @include span(8);
    }
    padding-right: 0;
    border-right: 0;
    border-radius: 5px 0 0 5px;
  }

  a {
    color: $default-green;
    text-decoration: none;
  }

  legend {
    border: 0 !important;
    margin-bottom: 0 !important;
    padding-bottom: 0 !important;
  }

  .control-block {
    border-bottom: 1px solid #fff;
    margin-bottom: 5px;
    @include clear();
  }

  //Input customizado:
  //O input parece conter itens (máximo: 3), incluindo o botão de search
  .list-input-custom {
    @include span(8);
    @media (min-width: $screen-mid-size) {
      @include span(4);
    }
    border-top: 1px solid $boder-ligthen-grey;
    border-bottom: 1px solid $boder-ligthen-grey;
    border-right: 1px solid $boder-ligthen-grey;
    border-left: 0;
    display: block;
    margin: 0;
    padding: 8px 0;
    background: #fff;
    text-align: right;
    border-radius: 0 5px 5px 0;

    .item {
      display: inline-block;
      padding: 0 10px;
      margin: 0;
      border-left: 1px solid $boder-ligthen-grey;
      font-weight: lighter;

      &:first-child {
        padding-right: 0;
      }
      &:last-child {
        padding: 0 10px;
        margin: 0;
      }

      .button-search {
        background: url("../images/search-button.gif") no-repeat;
        background-position: center center;
        height: 20px;
        width: 20px;
        border: 0;
      }

      .search-type input[type="checkbox"] {
        display: none;
      }

      .search-type input:checked ~ span {
        font-weight: bold;
        font-size: 12pt;
      }
    }
  }

  //Lista de opção de filtro
  //para o input custom
  .list-input-external {
    @include span(12);
    display: block;
    margin: 0;
    font-size: 10pt;

    .item {
      display: inline-block;
      padding: 0 10px;
      margin: 0;
      font-weight: lighter;

      a {
        color: $default-green;
        text-decoration: none;
      }

      .search-type input[type="checkbox"] {
        display: none;
      }

      .search-type input:checked ~ span {
        font-weight: bold;
        font-size: 9pt;
      }
    }
  }
}

